<resources>
    <string name="app_name">MoviesManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="ano_de_lancamento">Ano de Lançamento</string>
    <string name="produtora">Produtora</string>
    <string name="duracao">Duração (em min)</string>
    <string name="nota">Nota</string>
    <string name="genero">Gênero</string>
    <string name="watched">Watched</string>
    <string name="add_movie">Add movie</string>
    <string name="save">Save</string>
    <string name="remove_movie">Remove movie</string>
    <string name="edit_movie">Edit movie</string>
    <string name="movie_list">Movie List</string>
    <string name="movie_details">Movie Details</string>
    <string name="ordenar_por_nome">Ordenar por nome</string>
    <string name="ordenar_por_nota">Ordenar por nota</string>
    <string name="nota_invalida">Nota inválida, deve ser digitada uma nota entre 0.0 e 10.0</string>
</resources>